crates/query-engine/formatters/tests/snapshots/toon_snapshots__snapshot_aggregation_property_grouped.snap
---
source: crates/query-engine/formatters/tests/toon_snapshots.rs
expression: toon_encode(&r)
---
query_type: aggregation
columns[1]{name,function,target}:
  vulnerability_count,count,v
group_columns[1]{name,kind,node,property}:
  severity,property,v,severity
rows[5]{severity,vulnerability_count}:
  medium,8421
  high,2350
  low,1542
  critical,120
  info,42
