crates/query-engine/formatters/tests/snapshots/toon_snapshots__snapshot_aggregation_ungrouped.snap
---
source: crates/query-engine/formatters/tests/toon_snapshots.rs
expression: toon_encode(&r)
---
query_type: aggregation
columns[1]{name,function,target}:
  total,count,mr
rows[1]{total}:
  2347
