crates/query-engine/formatters/tests/snapshots/toon_snapshots__snapshot_pagination.snap
---
source: crates/query-engine/formatters/tests/toon_snapshots.rs
expression: toon_encode(&r)
---
query_type: traversal
nodes:
  MR[1]{id,iid}:
    1,42
pagination:
  has_more: true
  truncated: true
  next_cursor: eyJoIjoiYWQyMTczMWM5MTZm
